objects/Exception_eDAoT__c.object
<CustomObject>
    <fields>
        <fullName>EOT_Status__c</fullName>
        <label>EOT Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>Related to which Parent account</description>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Parent accounts are allowed.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exception eDAoTs</relationshipLabel>
        <relationshipName>Exception_eDAoTs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exception eDAoT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception eDAoT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception eDAoTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>